timer now working properly

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <button class="btn">Start Quiz</button>
         <p>Click Button to Start Quiz</p>
     </section>
+    <section>
+      
+    </section>
 
 </main>
 <body>
