--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
+<!--this row contains the start button-->
 <body>
     <div class="screen" id="introstart">
     <header>
         <h2 id="quiz">JavaScript Quiz</h2>
-
 </header>
+<!--row 17- 42 are my questions-->
     <p id="intro"> Coding quiz challenge. you will have one minute to answer these questions. if you get one wrong time will be deducted. </p>
     <button id="startBtn">start quiz</button>
     </div>
@@ -40,6 +41,7 @@
          <div id="answerA4">Yes</div>
          <div id="answerB4">No</div>
      </div>
+     <!--final queston-->
      <div class="screen" id="finalscreen">
          <div>
              <br><br>
